# buildshield-ci

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  buildshield-policy.yml  docker-compose.yml  pyproject.toml
.github/workflows/: buildshield-ci.yml
docs/: architecture.md  demo-script.md  deployment.md  final-project-summary.md  final-report.md  final-submission-checklist.md  interview-explanation.md  research-log.md  resume-points.md  screenshots-checklist.md
samples/secure-repo/: .npmrc  Dockerfile  package-lock.json  package.json  pip.conf  requirements.txt
samples/secure-repo/.github/workflows/: build.yml
samples/vulnerable-repo/: Dockerfile  package.json  requirements.txt
samples/vulnerable-repo/.github/workflows/: build.yml
src/supplysentinel/: __init__.py  cli.py
src/supplysentinel/analyzers/: dockerfile_analyzer.py  github_actions_analyzer.py  npm_analyzer.py  python_analyzer.py  utils.py
src/supplysentinel/core/: comparison.py  constants.py  exceptions.py  models.py  output.py  scanner.py  scoring.py
src/supplysentinel/intelligence/: osv_client.py
src/supplysentinel/inventory/: dependency_inventory.py
src/supplysentinel/policies/: policy_engine.py
src/supplysentinel/reporters/: report_generator.py  sarif_reporter.py
src/supplysentinel/web/: app.py  history.py
src/supplysentinel/web/static/: app.js  index.html  styles.css  vulnerability-intelligence.js
tests/: conftest.py  test_cli.py  test_comparison_engine.py  test_dashboard_api.py  test_dependency_inventory.py  test_deployment_files.py  test_dockerfile_analyzer.py  test_osv_intelligence.py  test_policy_engine.py  test_reporters.py  test_scan_engine.py  test_scan_history.py  test_vulnerability_intelligence_ui.py
