[project]
name = "supplysentinel"
version = "0.1.0"
description = "Advanced CI/CD Supply Chain Risk Detection and Dependency Confusion Defense Platform"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Saketh" }
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.0.0"
]

[project.scripts]
supplysentinel = "supplysentinel.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]