[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "buildshield-ci"
version = "0.12.6"
description = "Advanced CI/CD supply-chain risk analyzer and dependency confusion defense platform."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Saketh", email = "rootmass56@users.noreply.github.com" }
]
keywords = [
    "cybersecurity",
    "devsecops",
    "supply-chain-security",
    "dependency-confusion",
    "github-actions",
    "ci-cd",
    "sarif",
    "policy-as-code",
    "fastapi",
    "security-dashboard"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13"
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "PyYAML>=6.0.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0"
]

[project.scripts]
buildshield = "supplysentinel.cli:app"
supplysentinel = "supplysentinel.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
supplysentinel = [
    "web/static/*.html",
    "web/static/*.css",
    "web/static/*.js"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore::Warning"
]